--- a/008_Log4QtDemo/widget.ui
+++ b/008_Log4QtDemo/widget.ui
@@ -13,6 +13,58 @@
   <property name="windowTitle">
    <string>Widget</string>
   </property>
+  <widget class="QPushButton" name="pushButton_Qdebug">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>110</y>
+     <width>120</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Qdebug测试</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_Qwarning">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>190</y>
+     <width>120</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>QWarning测试</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_QCritical">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>270</y>
+     <width>120</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>QCritical测试</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_QFatal">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>350</y>
+     <width>120</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>QFatal测试</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
